zilean-public/middleware-rate-limit-zilean.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-zilean
  namespace: zilean
spec:
  rateLimit:
    average: 6     # 6 requests per source IP every ..
    period: 1m     # This is a per-node limit, and we have 12 nodes (x), randomly load-balanced, so it's effectively > 1/s
    burst: 12      # Allow 10 requests in the period to start off with, before rate-limiting kicks in
    sourceCriterion:
      requestHeaderName: CF-Connecting-IP # Rate-limit by cloudflare connecting IP
